--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.58.1",
     "react-router-dom": "^7.6.2",
     "recharts": "^3.2.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10"
   },
